test/libsolidity/syntaxTests/types/byte.sol
contract C {
    byte public a;
}
// ----
// ParserError 9182: (17-21): Function, variable, struct or modifier declaration expected.
